# opentron_digits

./: Makefile  README.md  pyproject.toml
notebooks/: ddgm.ipynb
src/: gen_col_digits.py  protocol.py  test_protocol.py  test_protocol_2.py
