[tool.poetry]
name = "opentron_digits"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
torch = "^1.10.2"
scikit-learn = "^1.0.2"
torchvision = "^0.11.3"
opentrons = "^5.0.1"
multipledispatch = "^0.6.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
